Fixed up CSS for less than 2 hits. Also fixed up minor issues on firefox CSS

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -20,7 +20,6 @@ header, main, #no-results, footer {
 #left-column {
 	overflow-y: scroll;
 	float: left;
-	width: 25%;
 	background-color: #ffffff;
 	border-right: 1px solid #CDCDCD;
 }
